tests/ui/ferrocene/compiler-arguments/extern/extern_no-path-and-path.stderr
error: extern location for some_crate does not exist: invalid
  --> $DIR/extern_no-path-and-path.rs:7:7
   |
LL |     ::some_crate::hello();
   |       ^^^^^^^^^^

error: aborting due to previous error

